--- a/involoved/src/component/homeScreen/homeScreen.css
+++ b/involoved/src/component/homeScreen/homeScreen.css
@@ -1,8 +1,9 @@
 .HomeScreen {
-   background-image: url("https://images.unsplash.com/photo-1512315342380-81f12a02bd7e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c2d7b436b564480e13857d5e35cb9b51&auto=format&fit=crop&w=699&q=80");
+   background-color: lightgrey;
  	 width: 100%;
 	 padding: 50px;
 	 background-repeat: repeat-y;
  	 /* z-index: 10;
  	 background-size: cover */
 }
+/* url("https://images.unsplash.com/photo-1512315342380-81f12a02bd7e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c2d7b436b564480e13857d5e35cb9b51&auto=format&fit=crop&w=699&q=80" */
