--- a/involoved/src/index.css
+++ b/involoved/src/index.css
@@ -1,5 +1,16 @@
 body {
+	/* display: flex; */
+	flex-flow:column;
   margin: 0;
-  padding: 0;
+  /* padding-bottom: 100px; */
+	min-height: 100vh;
   font-family: sans-serif;
+	background-color: white;
+  /* height:150%; */
 }
+/*
+*{ background-color: rgba(255,0,0,0.3);}
+* * { background-color: rgba(0,255,0,0.3);}
+* * * { background-color: rgba(35,0,55,0.3);}
+* * * * { background-color: rgba(255,0,0,0.3);}
+* * * * * { background-color: rgba(0,33,255,0.3);} */
