map and cleaned up

--- a/involved/src/component/navbar/footer.css
+++ b/involved/src/component/navbar/footer.css
@@ -76,7 +76,7 @@
 @media screen and (max-width: 767px) {
     #myFooter {
         text-align: center;
-				padding-top: 100px;
+				/* padding-top: px; */
     }
     #myFooter .row {
         margin: 0;
