--- a/involved/src/component/UI/button.css
+++ b/involved/src/component/UI/button.css
@@ -1,29 +1,41 @@
-.Button {
+ .Button {
     background-color: transparent;
     border: none;
-    color: white;
+    color: green;
     outline: none;
     cursor: pointer;
     font: inherit;
     padding: 10px;
     margin: 10px;
     font-weight: bold;
-}
+ }
 
-.Button:first-of-type {
+ .Button:first-of-type {
     margin-left: 0;
     padding-left: 0;
 }
 
 .Button:disabled {
-    color: #ccc;
+    color: red;
     cursor: not-allowed;
 }
 
 .Success {
-    color: #5C9210;
+    color: blue;
 }
 
 .Danger {
-    color: #944317;
+    color: yellow;
+}
+#button{
+	background-color: white;
+	 border: 1px solid black;
+	 color: black;
+	 padding: 10px 25px;
+	 text-align: center;
+	 text-decoration: none;
+	 display: inline-block;
+	 margin: 4px 2px;
+	 cursor: pointer;
+
 }
