soft code turn in

--- a/involved/src/component/navbar/navbar.css
+++ b/involved/src/component/navbar/navbar.css
@@ -1,6 +1,6 @@
 .nav-bar-container{
-	background: #DC143C;
-	background: linear-gradient(to right, #DC143C , lightblue);
+	background: white;
+	background: linear-gradient(to right, white , lightblue);
 
 
 }
